[package]
name = "crackhead-adventures"
version = "1.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# lto = "thin" i need this off for builind release build for linux 
strip="debuginfo"

[features]
dev = [
    "bevy/dynamic",
]

[dependencies.bevy]
version = "0.8"
default-features = false
# These are the remaining default features other than `bevy_audio` and `vorbis`
features = [
  "render",
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.12"
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[dependencies]
bevy-inspector-egui = "0.13.0"
bevy_rapier2d = "0.16.1"
bevy_prototype_debug_lines = "0.8"
navmesh = { git = "https://github.com/Pietrek14/navmesh", features = ["web"] }
tiled = { git = "https://github.com/Pietrek14/rs-tiled.git", branch = "next", default-features = false }
rand = "0.8.5"
winit = "0.26.1"
image = "0.24.3"
